change search results overflow to fix bug

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -163,7 +163,7 @@ footer a {
 
 #search-container-results {
     height: inherit;
-    overflow: scroll;
+    overflow-x: scroll;
 }
 
 .attractionListInfoDiv {
